--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.25.0",
     "imagekitio-react": "^4.3.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
